--- a/轮播.html
+++ b/轮播.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="UTF-8">
 		<title>轮播图，jquery版,通过class 的变化实现</title>
-		<script src="http://cdn.static.runoob.com/libs/jquery/1.10.2/jquery.min.js"></script>
+		<script src="lib/jquey-3.3-dev.js"></script>
 		<link rel="stylesheet"  href="css/banner.css" />
 	</head>
 	<body>
